# ai-gen-commit

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
ai_commit/: __init__.py  app.py  prompts.py  providers.py  utils.py
