[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_commit"]

[project]
name = "ai_commit"
version = "0.0.1"
description = "AI generated commit messages!"

dependencies = [
    "ollama==0.3.3",
]

[project.scripts]
ai-commit = "ai_commit.app:run"
